--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "clean": "gulp clean:src",
     "lint": "eslint '{src,test}/**/*.ts' --fix",
     "prepublish": "pnpm build",
-    "publish": "npm publish --access public",
+    "publish:public": "npm publish --access public",
     "update": "npm-check -u"
   },
   "keywords": [
