--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nguyen1512vl/nest-boilerplate.git"
+    "url": "git+https://github.com/nguyen1512vl/nest-boilerplate.git"
   },
   "schematics": "./dist/collection.json",
   "dependencies": {
