--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "@ackerman/nest-boilerplate",
-  "version": "0.0.1",
+  "name": "@nguyen1512vl/nest-boilerplate",
+  "version": "0.0.2",
   "description": "A boilerplate schematics for nestjs",
   "scripts": {
-    "postbuild": "pnpm copy:collection && pnpm copy:schematics",
-    "build": "rm -rf dist && tsc --project tsconfig.json",
+    "build": "rm -rf dist && tsc --project tsconfig.json && pnpm copy:collection && pnpm copy:schematics",
     "copy:collection": "cpx src/collection.json dist && cpx 'src/schematics/**/schema.json' dist/schematics",
     "copy:schematics": "cpx 'src/schematics/**/templates/**/*.*' dist/schematics && cpx 'src/schematics/**/templates/**/.*' dist/schematics && cpx 'src/schematics/**/templates/**/.*/**' dist/schematics",
     "clean": "gulp clean:src",
