--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
-    "compilerOptions": {
-      "module": "commonjs",
-      "target": "es2021",
-      "typeRoots": ["node_modules/@types"],
-      "outDir": "dist",
-      "declaration": true,
-      "removeComments": true,
-      "sourceMap": false,
-      "skipLibCheck": true
-    },
-    "include": ["src/utils", "src/schematics", "src/index.ts"],
-    "exclude": ["node_modules", "src/**/*.test.ts", "src/**/files/**"]
-  }
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "es2021",
+    "typeRoots": ["node_modules/@types"],
+    "outDir": "dist",
+    "declaration": true,
+    "removeComments": true,
+    "sourceMap": false,
+    "skipLibCheck": true
+  },
+  "include": ["src/utils", "src/schematics", "src/index.ts"],
+  "exclude": ["node_modules", "src/**/*.test.ts", "src/**/templates/**"]
+}
